fixed dark mode toggle and set overflow-x-hidden on body

--- a/src/css/input.css
+++ b/src/css/input.css
@@ -25,11 +25,6 @@
     }
   }
 
-.display-none {
-    @apply hidden;
-}
-
-
 .checkmark {
   position: relative;
   margin-left: 2.5rem;
